--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
     <li class="nav-item">
         <a class="nav-link" href="#"> About</a>
     </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Services
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Service-1</a>
+            <a class="dropdown-item" href="#">Service-2</a>
+            <a class="dropdown-item" href="#">Service-3</a>
+          </div>
+   
+    </li>
     <li class="nav-item">
         <a class="nav-link" href="#"> Contact</a>
     </li>
@@ -86,8 +97,34 @@
 </div> 
 </nav>
 
+<br>
+<br>
+<br>
 
-  
+<br>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar navbar-brand" href="#">Cocomo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> 
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    
+    <ul class="navbar-nav ml-auto">    
+            <li class="nav-item">
+            <a class="nav-link" href="#"> Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"> About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"> Contact</a>
+        </li>
+        </ul>
+</div>
+    </nav>
+
   </body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
