Colum divison through bootstrap

--- a/index.html
+++ b/index.html
@@ -125,7 +125,26 @@
 </div>
     </nav>
 
-  </body>
+
+    <!-- Responsive layout with 4 colums on Desktop   &  3 colums on Tablet  & 1 colums on Phone -->
+
+    <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: yellow ; border: 1px solid black">
+            col-md6.1
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: pink ; border: 1px solid black">
+            col-md6.2
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: orange ; border: 1px solid black">
+            col-md6.3
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: Gray ; border: 1px solid black">
+            col-md6.4
+        </div>
+
+    </div>
+
+  </body> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
