Container concepts added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <li class="nav-item">About</li>
            <li class="nav-item">Contact</li>
    </ul class="navbar-nav">
-</nav>
+</nav> 
 
 <!-- Navbar using bootstrap with a href link with it and using the nav-expand class -->
 <h1>Navbar using bootstrap with a href link with it and using the nav-expand class</h1>
@@ -99,10 +99,9 @@
 
 <br>
 <br>
-<br>
 
-<br>
 
+<h1>Nav bar with toggle button option</h1>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar navbar-brand" href="#">Cocomo</a>
@@ -125,7 +124,9 @@
 </div>
     </nav>
 
-
+    <br>
+    <br>
+<h1>Responsive layout with 4 colums on Desktop   &  3 colums on Tablet  & 1 colums on Phone </h1>
     <!-- Responsive layout with 4 colums on Desktop   &  3 colums on Tablet  & 1 colums on Phone -->
 
     <div class="row">
@@ -141,8 +142,49 @@
         <div class="col-lg-3 col-md-4 col-sm-6" style="background-color: Gray ; border: 1px solid black">
             col-md6.4
         </div>
-
     </div>
+<br>
+<br>
+<h1>Responsive layout with 6 colums on Desktop   &  4 colums on Tablet  & 1 colums on Phone</h1>
+       <!-- Responsive layout with 6 colums on Desktop   &  4 colums on Tablet  & 1 colums on Phone -->
+
+       <div class="row">
+        <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: yellow; border: 1px solid black">
+               col1
+        </div> 
+        <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: yellow; border: 1px solid black">
+            col2
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: yellow; border: 1px solid black">
+            col3
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: yellow; border: 1px solid black">
+            col4
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: yellow; border: 1px solid black">
+            col5
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-12" style="background-color: yellow; border: 1px solid black">
+            col6
+        </div>
+       </div>
+<br>
+<br>
+
+<!-- Container fluid concept, As container fluid covers the 100% width of the screen -->
+<h1>Container fluid concept, As container fluid covers the 100% width of the screen</h1>
+<div class="container-fluid" style="background-color: lightblue;">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque saepe totam, assumenda, molestias quia eligendi debitis recusandae quisquam voluptate voluptatum veritatis, eveniet est blanditiis nisi iste illum quod praesentium aliquam placeat iure soluta accusamus nihil? Ab tempore odit, vero iste ipsam earum architecto qui incidunt, consequatur eum cupiditate quas rerum dolore suscipit dolorem eius maiores praesentium repudiandae maxime quam soluta. Odit atque exercitationem minima debitis eaque! Quod hic, in natus blanditiis vel delectus sequi sit placeat unde? Nesciunt, quos minima? Veniam, nostrum accusantium dicta mollitia repellendus earum, quasi eos pariatur quod ratione nisi assumenda quaerat neque repudiandae? Ut mollitia dignissimos inventore voluptates, possimus sequi iste voluptatem distinctio! Velit cumque ipsa pariatur assumenda corrupti? Molestiae, beatae minus error in, aliquid maiores adipisci laudantium doloremque natus id maxime dolore labore ut repellendus minima incidunt consequuntur sunt ab ea modi. Corporis adipisci rerum odit, aut atque quis mollitia repellendus veritatis reiciendis in sapiente?   
+    </div>
+
+    <br><br>
+    <!-- Container concept, As container don't covers the 100% width of the screen it basically centeralized the text -->
+<h1>Container concept, As container don't covers the 100% width of the screen it basically centeralized the text</h1>
+<div class="container" style="background-color:lightgreen;">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque saepe totam, assumenda, molestias quia eligendi debitis recusandae quisquam voluptate voluptatum veritatis, eveniet est blanditiis nisi iste illum quod praesentium aliquam placeat iure soluta accusamus nihil? Ab tempore odit, vero iste ipsam earum architecto qui incidunt, consequatur eum cupiditate quas rerum dolore suscipit dolorem eius maiores praesentium repudiandae maxime quam soluta. Odit atque exercitationem minima debitis eaque! Quod hic, in natus blanditiis vel delectus sequi sit placeat unde? Nesciunt, quos minima? Veniam, nostrum accusantium dicta mollitia repellendus earum, quasi eos pariatur quod ratione nisi assumenda quaerat neque repudiandae? Ut mollitia dignissimos inventore voluptates, possimus sequi iste voluptatem distinctio! Velit cumque ipsa pariatur assumenda corrupti? Molestiae, beatae minus error in, aliquid maiores adipisci laudantium doloremque natus id maxime dolore labore ut repellendus minima incidunt consequuntur sunt ab ea modi. Corporis adipisci rerum odit, aut atque quis mollitia repellendus veritatis reiciendis in sapiente?   
+    </div>
+
+
 
   </body> 
     <!-- Optional JavaScript -->
