--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <script src="https://kit.fontawesome.com/d7a6a4d94e.js" crossorigin="anonymous"></script>    <title>Hello, world!</title>
   </head>
   <body>
       <!-- Navbar using bootstrap with using href link with it -->
@@ -184,6 +183,14 @@
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque saepe totam, assumenda, molestias quia eligendi debitis recusandae quisquam voluptate voluptatum veritatis, eveniet est blanditiis nisi iste illum quod praesentium aliquam placeat iure soluta accusamus nihil? Ab tempore odit, vero iste ipsam earum architecto qui incidunt, consequatur eum cupiditate quas rerum dolore suscipit dolorem eius maiores praesentium repudiandae maxime quam soluta. Odit atque exercitationem minima debitis eaque! Quod hic, in natus blanditiis vel delectus sequi sit placeat unde? Nesciunt, quos minima? Veniam, nostrum accusantium dicta mollitia repellendus earum, quasi eos pariatur quod ratione nisi assumenda quaerat neque repudiandae? Ut mollitia dignissimos inventore voluptates, possimus sequi iste voluptatem distinctio! Velit cumque ipsa pariatur assumenda corrupti? Molestiae, beatae minus error in, aliquid maiores adipisci laudantium doloremque natus id maxime dolore labore ut repellendus minima incidunt consequuntur sunt ab ea modi. Corporis adipisci rerum odit, aut atque quis mollitia repellendus veritatis reiciendis in sapiente?   
     </div>
 
+    <br>
+    <br>
+    
+    <h1>Button and Icons and icons using the font-awsome</h1>
+    <!-- Button and Icons and icons using the font-awsome -->
+
+    <button type="button" class="btn btn-dark btn-lg"> <i class="fab fa-apple"></i>Dark</button>        
+    <button type="button" class="btn btn-light btn-lg"> <i class="fab fa-google"></i> Light</button>
 
 
   </body> 
