--- a/index.html
+++ b/index.html
@@ -192,6 +192,37 @@
     <button type="button" class="btn btn-dark btn-lg"> <i class="fab fa-apple"></i>Dark</button>        
     <button type="button" class="btn btn-light btn-lg"> <i class="fab fa-google"></i> Light</button>
 
+    <br>
+    <br>
+    
+    <!-- Carousel Types -->
+
+    <h1>Carousel Types</h1>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="false"  style="  width:50%; height: 500px ; background-color: red"; >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+              <h1>FIRST SLIDE</h1>
+              <img src="..." class="d-block w-100" alt="..." >
+          </div>
+          <div class="carousel-item">
+            <h1>Second SLIDE</h1>
+            <img src="..." class="d-block w-100" alt="..." style="background-color: yellow;">
+          </div>
+          <div class="carousel-item">
+            <h1>Third slide SLIDE</h1>
+            <img src="..." class="d-block w-100" alt="..." style="background-color: orange;">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
+
 
   </body> 
     <!-- Optional JavaScript -->
