--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
     <br>
     <br>
     
-    <!-- Carousel Types -->
+    <!-- Carousel  -->
 
-    <h1>Carousel Types</h1>
+    <h1>Carousel </h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="false"  style="  width:50%; height: 500px ; background-color: red"; >
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -223,6 +223,72 @@
           </a>
       </div>
 
+<br>
+<br>
+ <!-- Cards -->
+
+ <h1>Cards Added</h1>
+
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Free</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>10 users included</li>
+              <li>2 GB of storage</li>
+              <li>Email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Pro</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>20 users included</li>
+              <li>10 GB of storage</li>
+              <li>Priority email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+          </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Enterprise</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>30 users included</li>
+              <li>15 GB of storage</li>
+              <li>Phone and email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+          </div>
+        </div>
+      </div>
+<br><br>
+
+<!-- Jumbotron concept added -->
+
+<h1>Jumbotron concept added </h1>
+      <div class="jumbotron" style="width: 30%; background:transparent">
+        <h1 >Hello, world!</h1>
+        <h4>LUNCH Timming</h4>
+        <p>Starting from</p>
+        <p>6am to 10am</p>
+
+        <button class="btn btn-lg btn-block btn-outline-dark" type="button">Bookur self</button>
+      </div>
 
   </body> 
     <!-- Optional JavaScript -->
