--- a/z_index_concept.html
+++ b/z_index_concept.html
@@ -25,5 +25,20 @@
     <div class="red">
         <h1>red</h1>
       </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<h1>Z index</h1>
+
+      <div class="yellow1">
+        <h1>yellow</h1>
+      </div>
+  
+      <div class="blue1">
+        <h1>Blue</h1>
+      </div>
+  
+      <div class="red1">
+          <h1>red</h1>
+        </div>
 </body>
 </html>
